New endpoint for offers factoring
